Added Ablity to play list games
